--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node ../public/index.js",
+    "start": "tsc && node ../dist/index.js",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
